--- a/src/app/applications/multicast/multicast-edit/multicast-edit.component.html
+++ b/src/app/applications/multicast/multicast-edit/multicast-edit.component.html
@@ -210,7 +210,7 @@
           multiple
           name="devices"
           [compareWith]="compare"
-          [(ngModel)]="selectedIotDevices"
+          [(ngModel)]="multicast.iotDevices"
         >
           <mat-option disabled="disabled" class="filter-option">
             <button
