--- a/src/app/admin/api-key/api-key-list/api-key-list.component.html
+++ b/src/app/admin/api-key/api-key-list/api-key-list.component.html
@@ -4,7 +4,7 @@
   <div class="row">
       <div class="col-12">
           <div class="jumbotron--table">
-              <app-api-key-table></app-api-key-table>
+              <app-api-key-table [organisationId]="organisationId"></app-api-key-table>
           </div>
       </div>
   </div>
