Api key management works

--- a/src/app/admin/api-key/api-key-edit/api-key-edit.component.html
+++ b/src/app/admin/api-key/api-key-edit/api-key-edit.component.html
@@ -43,6 +43,7 @@
         name="permissions"
         [compareWith]="compare"
         [(ngModel)]="apiKeyRequest.permissions"
+        [multiple]="true"
       >
         <mat-option
           *ngFor="let permission of permissions"
