--- a/src/app/admin/api-key/api-key-list/api-key-table/api-key-table.component.html
+++ b/src/app/admin/api-key/api-key-list/api-key-table/api-key-table.component.html
@@ -16,14 +16,7 @@
         {{ 'API-KEY.NAME' | translate }}
       </th>
       <td mat-cell *matCellDef="let element">
-        <!-- <a *ngIf="canAccess(element); else justText"
-              (click)="routeToPermissions(element)"
-                  routerLinkActive="active" class="permission-link">
-              {{element.name}}
-              </a> -->
-        <!-- <ng-template #justText> -->
         {{ element.name }}
-        <!-- </ng-template> -->
       </td>
     </ng-container>
 
@@ -33,9 +26,12 @@
         {{ 'API-KEY.PERMISSIONS' | translate }}
       </th>
       <td mat-cell *matCellDef="let element">
-        <div *ngIf="element.users; else noUsers">
-          {{ element.users.length }}
-        </div>
+        <ng-container *ngIf="element.permissions; else noUsers">
+          <ng-container *ngFor="let pm of element.permissions">
+            <span>{{ pm.name }}</span>
+            <br />
+          </ng-container>
+        </ng-container>
         <ng-template #noUsers>{{ 'NoUsersAdded' | translate }}</ng-template>
       </td>
     </ng-container>
@@ -68,13 +64,14 @@
             class="dropdown-menu dropdown-menu--table"
             attr.aria-labelledby="tableRowDropdown-{{ element.id }}"
           >
-            <li class="dropdown-item">
+            <!-- TODO: Delete. Edit is not part of estimate. Since it's only one option, use a delete button instead -->
+            <!-- <li class="dropdown-item">
               <a
                 [routerLink]="['/admin/api-key', element.id, 'edit-api-key']"
                 routerLinkActive="active"
                 >{{ 'API-KEY.TABLE-ROW.EDIT' | translate }}
               </a>
-            </li>
+            </li> -->
             <li class="dropdown-item">
               <a (click)="deleteApiKey(element.id)" [routerLink]=""
                 >{{ 'API-KEY.TABLE-ROW.DELETE' | translate }}
