--- a/src/app/navbar/organisation-dropdown/organisation-dropdown.component.html
+++ b/src/app/navbar/organisation-dropdown/organisation-dropdown.component.html
@@ -39,12 +39,12 @@
             </a>
             <fa-icon [icon]="faIdBadge" class="navbar-icon"></fa-icon>
         </li>
-        <li class="nav-item">
-            <a routerLink="/admin/api-key" routerLinkActive="active"
-                class="nav-link pl-5 position-relative rounded">
-                {{'NAV.API-KEY' | translate}}
-            </a>
-            <fa-icon [icon]="faKey" class="navbar-icon"></fa-icon>
-        </li>
     </div>
+    <li *ngIf="user && (isOrgAdmin || isGlobalAdmin)" class="nav-item">
+        <a routerLink="/admin/api-key" routerLinkActive="active"
+            class="nav-link pl-5 position-relative rounded">
+            {{'NAV.API-KEY' | translate}}
+        </a>
+        <fa-icon [icon]="faKey" class="navbar-icon"></fa-icon>
+    </li>
 </ul>
