--- a/src/app/admin/api-key/api-key-list/api-key-table/api-key-table.component.html
+++ b/src/app/admin/api-key/api-key-list/api-key-table/api-key-table.component.html
@@ -50,35 +50,12 @@
     <ng-container matColumnDef="menu">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
-        <div class="dropdown" *ngIf="canAccess(element)">
-          <a
-            href="#"
-            role="button"
-            id="tableRowDropdown-{{ element.id }}"
-            class="applicationRow__edit dropdown-toggle"
-            data-toggle="dropdown"
-            aria-expanded="false"
-            [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"
-          ></a>
-          <ul
-            class="dropdown-menu dropdown-menu--table"
-            attr.aria-labelledby="tableRowDropdown-{{ element.id }}"
-          >
-            <!-- TODO: Delete. Edit is not part of estimate. Since it's only one option, use a delete button instead -->
-            <!-- <li class="dropdown-item">
-              <a
-                [routerLink]="['/admin/api-key', element.id, 'edit-api-key']"
-                routerLinkActive="active"
-                >{{ 'API-KEY.TABLE-ROW.EDIT' | translate }}
-              </a>
-            </li> -->
-            <li class="dropdown-item">
-              <a (click)="deleteApiKey(element.id)" [routerLink]=""
-                >{{ 'API-KEY.TABLE-ROW.DELETE' | translate }}
-              </a>
-            </li>
-          </ul>
-        </div>
+        <a
+          *ngIf="canAccess(element)"
+          (click)="deleteApiKey(element.id)"
+          [routerLink]=""
+          >{{ 'API-KEY.TABLE-ROW.DELETE' | translate }}
+        </a>
       </td>
     </ng-container>
 
