--- a/src/app/applications/multicast/multicast-table/multicast-table.component.html
+++ b/src/app/applications/multicast/multicast-table/multicast-table.component.html
@@ -21,7 +21,7 @@
           {{ 'MULTICAST-TABLE.TYPE' | translate }}</th>
         <td mat-cell *matCellDef="let element">
   
-          {{element.lorawanMulticastDefinition.groupType | translate}}</td>
+          {{element.lorawanMulticastDefinition.groupType}}</td>
       </ng-container>
   
       <!-- Options Column -->
