--- a/src/app/applications/multicast/multicast-table/multicast-table.component.html
+++ b/src/app/applications/multicast/multicast-table/multicast-table.component.html
@@ -2,7 +2,7 @@
     <div class="loading-shade" *ngIf="isLoadingResults">
       <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
     </div>
-    <table mat-table [dataSource]="dataSource" matSort matSortActive="groupName" matSortDirection="asc" matSortDisableClear>
+    <table mat-table [dataSource]="multicasts" matSort matSortActive="groupName" matSortDirection="asc" matSortDisableClear>
   
       <!-- Name Column -->
       <ng-container matColumnDef="groupName">
