Revised permission system. Admin pages can still be accessed by url if only read

--- a/src/app/applications/datatarget/datatarget-list/datatarget-list.component.html
+++ b/src/app/applications/datatarget/datatarget-list/datatarget-list.component.html
@@ -1,6 +1,7 @@
 <app-top-bar [pageLimit]="pageLimit" [title]="title" [ctaLabel]="'FORM.CREATE-NEW-DATATARGET' | translate"
   [ctaRouterLink]="'datatarget-edit'" (updatePageLimit)="updatePageLimit($event)" [subPage]="true"
-  [backButton]="backButton">
+  [backButton]="backButton"
+  [canEdit]="canEdit">
 </app-top-bar>
 <div class="container-fluid">
   <div class="row">
