--- a/src/app/navbar/organisation-dropdown/organisation-dropdown.component.html
+++ b/src/app/navbar/organisation-dropdown/organisation-dropdown.component.html
@@ -25,7 +25,7 @@
         </a>
         <fa-icon [icon]="faBurn" class="navbar-icon"></fa-icon>
     </li>
-    <div *ngIf="user && isOrgAdmin && !isGlobalAdmin">
+    <div *ngIf="user && isUserAdmin && !isGlobalAdmin">
         <li class="nav-item">
             <a routerLink="/admin/users" routerLinkActive="active" class="nav-link pl-5 position-relative rounded">
                 {{'NAV.USERS' | translate}}
