--- a/src/app/new-kombit-user-page/new-user.component.html
+++ b/src/app/new-kombit-user-page/new-user.component.html
@@ -3,13 +3,12 @@
     <div class="col-12">
       <div class="jumbotron">
         <h1>
-          Siden dette er dit første login, bedes du udfylde din mail og de
-          organisationer du ønsker at være medlem af.
+        {{'NEW_USER.FIRST_LOGIN' | translate}}
         </h1>
         <form (ngSubmit)="onSubmit()" #newUserForm="ngForm" class="p-3 mt-4">
           <div class="row">
             <div class="form-group mt-3">
-              <label class="form-label" for="email">Email</label>*
+              <label class="form-label" for="email">{{'USERS.EMAIL' | translate}}</label>*
 
               <input
                 type="email"
@@ -23,9 +22,9 @@
             </div>
 
             <div class="form-group mt-3 col-12">
-              <label class="form-label" for="groupType">Organisationer</label>*
+              <label class="form-label" for="groupType">{{'NAV.ORGANISATIONS' | translate}}</label>*
               <mat-form-field appearance="outline">
-                <mat-label>Organisationer</mat-label>
+                <mat-label>{{'NAV.ORGANISATIONS' | translate}}</mat-label>
                 <mat-select
                   multiple
                   name="organisations"
@@ -47,10 +46,10 @@
           </div>
           <div class="form-group mt-3">
             <button class="btn btn-secondary" type="button">
-              tilbage
+              {{'NAV.BACK' | translate}}
             </button>
             <button class="btn btn-primary ml-2" type="submit">
-              submit
+              {{'USERS.SAVE' | translate}}
             </button>
           </div>
         </form>
