--- a/src/app/new-kombit-user-page/new-user.component.html
+++ b/src/app/new-kombit-user-page/new-user.component.html
@@ -3,12 +3,22 @@
     <div class="col-12">
       <div class="jumbotron">
         <h1>
-        {{'NEW_USER.FIRST_LOGIN' | translate}}
+          {{ 'NEW_USER.FIRST_LOGIN' | translate }}
         </h1>
         <form (ngSubmit)="onSubmit()" #newUserForm="ngForm" class="p-3 mt-4">
+          <div *ngIf="errorMessages" class="error-messages p-3">
+            <ul class="mb-0">
+              <li *ngFor="let error of errorMessages">
+                {{ error | translate }}
+              </li>
+            </ul>
+          </div>
           <div class="row">
             <div class="form-group mt-3">
-              <label class="form-label" for="email">{{'USERS.EMAIL' | translate}}</label>*
+              <label class="form-label" for="createNewKombitUserDto.email">{{
+                'USERS.EMAIL' | translate
+              }}</label
+              >*
 
               <input
                 type="email"
@@ -17,18 +27,27 @@
                 maxlength="50"
                 required
                 name="email"
-                [(ngModel)]="email"
+                [(ngModel)]="createNewKombitUserDto.email"
+                [ngClass]="{
+                  'is-invalid':
+                    formFailedSubmit && errorFields.includes('email'),
+                  'is-valid': formFailedSubmit && !errorFields.includes('email')
+                }"
               />
             </div>
 
             <div class="form-group mt-3 col-12">
-              <label class="form-label" for="groupType">{{'NAV.ORGANISATIONS' | translate}}</label>*
+              <label class="form-label" for="groupType">{{
+                'NAV.ORGANISATIONS' | translate
+              }}</label
+              >*
               <mat-form-field appearance="outline">
-                <mat-label>{{'NAV.ORGANISATIONS' | translate}}</mat-label>
+                <mat-label>{{ 'NAV.ORGANISATIONS' | translate }}</mat-label>
                 <mat-select
                   multiple
                   name="organisations"
                   [compareWith]="compare"
+                  [(ngModel)]="createNewKombitUserDto.organizations"
                   panelClass="overflow-x-hidden"
                   aria-required="true"
                 >
@@ -37,7 +56,8 @@
                   ></mat-select-search>
 
                   <mat-option
-                    *ngFor="let org of filteredOrganisations | async" [value]="org"
+                    *ngFor="let org of filteredOrganisations | async"
+                    [value]="org"
                     >{{ org.name }}</mat-option
                   >
                 </mat-select>
@@ -45,11 +65,8 @@
             </div>
           </div>
           <div class="form-group mt-3">
-            <button class="btn btn-secondary" type="button">
-              {{'NAV.BACK' | translate}}
-            </button>
             <button class="btn btn-primary ml-2" type="submit">
-              {{'USERS.SAVE' | translate}}
+              {{ 'USERS.SAVE' | translate }}
             </button>
           </div>
         </form>
