Edit API key PR

--- a/src/app/admin/api-key/api-key-edit/api-key-edit.component.html
+++ b/src/app/admin/api-key/api-key-edit/api-key-edit.component.html
@@ -42,7 +42,7 @@
         class="form-control"
         name="permissions"
         [compareWith]="compare"
-        [(ngModel)]="apiKeyRequest.permissions"
+        [(ngModel)]="apiKeyRequest.permissionIds"
         [multiple]="true"
       >
         <mat-option
