Changed name so it's more clear that it's requestedOrganizations and not actual organizations. Started on moving userpage link and login to top right corner.

--- a/src/app/admin/users/new-kombit-user-page/new-user.component.html
+++ b/src/app/admin/users/new-kombit-user-page/new-user.component.html
@@ -47,7 +47,7 @@
                   multiple
                   name="organisations"
                   [compareWith]="compare"
-                  [(ngModel)]="createNewKombitUserDto.organizations"
+                  [(ngModel)]="createNewKombitUserDto.requestedOrganizations"
                   panelClass="overflow-x-hidden"
                   aria-required="true"
                 >
