--- a/src/app/admin/users/user-page/user-page.component.html
+++ b/src/app/admin/users/user-page/user-page.component.html
@@ -15,10 +15,10 @@
         </h3>
         <div>
           <h4>{{ 'USER_PAGE.APPLIED_ORGANISATIONS' | translate }}</h4>
-          <p *ngFor="let org of userOrganizations">
+          <p *ngFor="let org of requestedUserOrganizations">
             {{ org.name }}
           </p>
-          <p class="noOrgs" *ngIf="userOrganizations.length === 0">
+          <p class="noOrgs" *ngIf="checkForUserOrganizations">
             {{ 'USER_PAGE.NO_APPLIED_ORGS' | translate }}
           </p>
           <h6 class="mt-5">
@@ -36,7 +36,7 @@
           </div>
           <div class="form-group mt-3">
             <mat-form-field appearance="outline">
-              <mat-label *ngIf="organizations.length > 0; else noMultiOrgs">{{
+              <mat-label *ngIf="checkForRemainingOrganizations; else noMultiOrgs">{{
                 'NAV.ORGANISATIONS' | translate
               }}</mat-label>
               <ng-template #noMultiOrgs>
@@ -48,7 +48,7 @@
                 multiple
                 name="organizations"
                 [compareWith]="compare"
-                [(ngModel)]="updateUserOrgs.organizations"
+                [(ngModel)]="updateUserOrgs.requestedOrganizations"
                 panelClass="overflow-x-hidden"
                 aria-required="true"
               >
