--- a/src/app/admin/users/new-kombit-user-page/new-user.component.html
+++ b/src/app/admin/users/new-kombit-user-page/new-user.component.html
@@ -1,4 +1,4 @@
-<div class="container-flud">
+<div class="container-fluid">
   <div class="row">
     <div class="col-12">
       <div class="jumbotron">
