Multicast text description changes

--- a/src/app/applications/multicast/multicast-edit/multicast-edit.component.html
+++ b/src/app/applications/multicast/multicast-edit/multicast-edit.component.html
@@ -36,6 +36,9 @@
         'QUESTION.GIVE-MULTICAST-ADDRESS' | translate
       }}</label
       >*
+      <label class="text--small">
+        {{'QUESTION.MULTICAST.HINT-8-HEXA' | translate}}
+      </label>
       <input
         type="text"
         [placeholder]="'QUESTION.MULTICAST-ADDRESS-PLACEHOLDER' | translate"
@@ -59,6 +62,9 @@
         'QUESTION.GIVE-MULTICAST-NETWORK-KEY' | translate
       }}</label
       >*
+      <label class="text--small">
+        {{'QUESTION.MULTICAST.HINT-32-HEXA' | translate}}
+      </label>
       <input
         type="text"
         [placeholder]="'QUESTION.MULTICAST-NETWORK-KEY-PLACEHOLDER' | translate"
@@ -81,6 +87,9 @@
         'QUESTION.GIVE-MULTICAST-APPLICATION-KEY' | translate
       }}</label
       >*
+      <label class="text--small">
+        {{'QUESTION.MULTICAST.HINT-32-HEXA' | translate}}
+      </label>
       <input
         type="text"
         [placeholder]="
@@ -125,6 +134,9 @@
         'QUESTION.GIVE-MULTICAST-DATARATE' | translate
       }}</label
       >*
+      <div class="text--small">
+        {{'QUESTION.MULTICAST.HINT-DATA-RATE' | translate}}
+      </div>
       <input
         type="number"
         [placeholder]="multicast.dr"
@@ -145,6 +157,9 @@
         'QUESTION.GIVE-MULTICAST-FREQUENCY' | translate
       }}</label
       >*
+      <div class="text--small">
+        {{'QUESTION.MULTICAST.HINT-FREQUENCY' | translate}}
+      </div>
       <input
         type="number"
         [placeholder]="multicast.frequency"
