--- a/src/app/applications/multicast/multicast-edit/multicast-edit.component.html
+++ b/src/app/applications/multicast/multicast-edit/multicast-edit.component.html
@@ -36,9 +36,6 @@
         'QUESTION.GIVE-MULTICAST-ADDRESS' | translate
       }}</label
       >*
-      <label class="text--small">
-        {{'QUESTION.MULTICAST.HINT-8-HEXA' | translate}}
-      </label>
       <input
         type="text"
         [placeholder]="'QUESTION.MULTICAST-ADDRESS-PLACEHOLDER' | translate"
@@ -55,6 +52,9 @@
         }"
         (keypress)="keyPressHexadecimal($event)"
       />
+      <label>
+        {{'QUESTION.MULTICAST.HINT-8-HEXA' | translate}}
+      </label>
     </div>
 
     <div class="form-group mt-3">
@@ -62,9 +62,6 @@
         'QUESTION.GIVE-MULTICAST-NETWORK-KEY' | translate
       }}</label
       >*
-      <label class="text--small">
-        {{'QUESTION.MULTICAST.HINT-32-HEXA' | translate}}
-      </label>
       <input
         type="text"
         [placeholder]="'QUESTION.MULTICAST-NETWORK-KEY-PLACEHOLDER' | translate"
@@ -80,6 +77,9 @@
         }"
         (keypress)="keyPressHexadecimal($event)"
       />
+      <label>
+        {{'QUESTION.MULTICAST.HINT-32-HEXA' | translate}}
+      </label>
     </div>
 
     <div class="form-group mt-3">
@@ -87,9 +87,6 @@
         'QUESTION.GIVE-MULTICAST-APPLICATION-KEY' | translate
       }}</label
       >*
-      <label class="text--small">
-        {{'QUESTION.MULTICAST.HINT-32-HEXA' | translate}}
-      </label>
       <input
         type="text"
         [placeholder]="
@@ -107,6 +104,9 @@
         }"
         (keypress)="keyPressHexadecimal($event)"
       />
+      <label>
+        {{'QUESTION.MULTICAST.HINT-32-HEXA' | translate}}
+      </label>
     </div>
 
     <div class="form-group mt-3">
@@ -134,9 +134,6 @@
         'QUESTION.GIVE-MULTICAST-DATARATE' | translate
       }}</label
       >*
-      <div class="text--small">
-        {{'QUESTION.MULTICAST.HINT-DATA-RATE' | translate}}
-      </div>
       <input
         type="number"
         [placeholder]="multicast.dr"
@@ -150,6 +147,9 @@
           'is-valid': formFailedSubmit && !errorFields.includes('dr')
         }"
       />
+      <label>
+        {{'QUESTION.MULTICAST.HINT-DATA-RATE' | translate}}
+      </label>
     </div>
 
     <div class="form-group mt-3">
@@ -157,9 +157,6 @@
         'QUESTION.GIVE-MULTICAST-FREQUENCY' | translate
       }}</label
       >*
-      <div class="text--small">
-        {{'QUESTION.MULTICAST.HINT-FREQUENCY' | translate}}
-      </div>
       <input
         type="number"
         [placeholder]="multicast.frequency"
@@ -173,6 +170,9 @@
           'is-valid': formFailedSubmit && !errorFields.includes('frequency')
         }"
       />
+      <label>
+        {{'QUESTION.MULTICAST.HINT-FREQUENCY' | translate}}
+      </label>
     </div>
 
     <div class="form-group mt-3">
