Datatarget multi-types administration and new FIWARE Datatarget type

--- a/src/app/applications/datatarget/datatarget-list/datatarget-list.component.html
+++ b/src/app/applications/datatarget/datatarget-list/datatarget-list.component.html
@@ -1,5 +1,5 @@
 <app-top-bar [pageLimit]="pageLimit" [title]="title" [ctaLabel]="'FORM.CREATE-NEW-DATATARGET' | translate"
-  [ctaRouterLink]="'datatarget-edit'" (updatePageLimit)="updatePageLimit($event)" [subPage]="true"
+  [ctaRouterLink]="'datatarget-new'" (updatePageLimit)="updatePageLimit($event)" [subPage]="true"
   [backButton]="backButton">
 </app-top-bar>
 <div class="container-fluid">
