--- a/src/app/applications/iot-devices/iot-device-detail/iot-device-detail.component.html
+++ b/src/app/applications/iot-devices/iot-device-detail/iot-device-detail.component.html
@@ -12,8 +12,18 @@
                     <!-- Datapackage, Downlink, API Key -->
                     <mat-tab-group animationDuration="200ms">
                         <mat-tab label="{{'IOTDEVICE.DETAIL-TAB' | translate}}">
+                          <ng-container *ngIf="device.latestReceivedMessage; else noSentTime">
                             <app-data-package [latestReceivedMessage]="device.latestReceivedMessage">
                             </app-data-package>
+                            <mat-divider></mat-divider>
+                            <app-data-packages-timestamp [receivedMessagesMetadata]="device.receivedMessagesMetadata">
+                            </app-data-packages-timestamp>
+                          </ng-container>
+                          <ng-template #noSentTime>
+                            <p class="my-2 mx-3">
+                              {{ 'IOTDEVICE.NO-DATAPACKAGE' | translate }}
+                            </p>
+                          </ng-template>
                         </mat-tab>
                         <mat-tab label="{{'IOTDEVICE.DOWNLINK-TAB' | translate}}" *ngIf="canStartDownlink">
                             <app-downlink [device]="device" [errorMessages]="errorMessages"></app-downlink>
