--- a/src/app/applications/iot-devices/iot-devices-table/iot-devices-table.component.html
+++ b/src/app/applications/iot-devices/iot-devices-table/iot-devices-table.component.html
@@ -3,6 +3,12 @@
     <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
   </div>
   <table mat-table [dataSource]="data" matSort matSortActive="name" matSortDirection="asc" matSortDisableClear>
+    <ng-template #notSupported>
+      <span>{{'IOTDEVICE-TABLE-ROW.NOT-SUPPORTED' | translate}}</span>
+    </ng-template>
+    <ng-template #notAvailable>
+      <span>{{'IOTDEVICE-TABLE-ROW.NOT-AVAILABLE' | translate}}</span>
+    </ng-template>
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
@@ -54,6 +60,34 @@
       <td mat-cell *matCellDef="let element">{{lastActive(element)}}</td>
     </ng-container>
 
+    <!-- RSSI column -->
+    <ng-container matColumnDef="rssi">
+      <th *matHeaderCellDef mat-header-cell>
+        {{ 'IOT-TABLE.RSSI' | translate }}
+      </th>
+      <td mat-cell *matCellDef="let element">
+        <ng-container *ngIf="element.type === 'LORAWAN'; else notSupported">
+          <div *ngIf="isValidRssiInfo(element.latestReceivedMessage?.rawData?.rxInfo); else notAvailable">
+            {{buildFromLoRaRxInfo(element.latestReceivedMessage.rawData.rxInfo, 'rssi')}}
+          </div>
+        </ng-container>
+      </td>
+    </ng-container>
+
+    <!-- SNR column -->
+    <ng-container matColumnDef="snr">
+      <th *matHeaderCellDef mat-header-cell>
+        {{ 'IOT-TABLE.SNR' | translate }}
+      </th>
+      <td mat-cell *matCellDef="let element">
+        <ng-container *ngIf="element.type === 'LORAWAN'; else notSupported">
+          <div *ngIf="isValidRssiInfo(element.latestReceivedMessage?.rawData?.rxInfo); else notAvailable">
+            {{buildFromLoRaRxInfo(element.latestReceivedMessage.rawData.rxInfo, 'loRaSNR')}}
+          </div>
+        </ng-container>
+      </td>
+    </ng-container>
+
     <ng-container matColumnDef="menu">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
@@ -63,8 +97,8 @@
             [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
           <ul class="dropdown-menu dropdown-menu--table" attr.aria-labelledby="tableRowDropdown-{{element.id}}">
             <li class="dropdown-item">
-              <a [routerLink]="['iot-device-edit', element.id]"
-                routerLinkActive="active">{{ 'IOTDEVICE-TABLE-ROW.EDIT' | translate }}
+              <a [routerLink]="['iot-device-edit', element.id]" routerLinkActive="active">{{ 'IOTDEVICE-TABLE-ROW.EDIT'
+                | translate }}
               </a>
             </li>
             <li class="dropdown-item">
