Made admin/users so there is two tables. One for existing users and one for users applying. Next step is to make the approve and reject buttons and functionality.

--- a/src/app/shared/components/top-bar/top-bar.component.html
+++ b/src/app/shared/components/top-bar/top-bar.component.html
@@ -97,7 +97,7 @@
           <div class="col-md-5 order-first order-md-last search-form-wrapper">
             <!-- Search  -->
 
-            <form *ngIf="hasEmail()" class="search-form">
+            <form *ngIf="hasEmail() && hasAnyPermission()" class="search-form">
               <mat-form-field class="search-form--full-width">
                 <mat-label >{{ 'SEARCH.PLACEHOLDER' | translate }}</mat-label>
                 <input
